// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [GET] should generate with pathParamsType \`inline\` 1`] = `
"import client from "@kubb/swagger-client/client";
import type { ResponseConfig } from "@kubb/swagger-client/client";

 /**
 * @summary Info for a specific pet
 * @link /pets/:pet_id
 */
export async function showPetById(petId: ShowPetByIdPathParams["pet_id"], testId: ShowPetByIdPathParams["testId"], options: Partial<Parameters<typeof client>[0]> = {}): Promise<ResponseConfig<ShowPetByIdQueryResponse>["data"]> {
    const res = await client<ShowPetByIdQueryResponse>({ method: "get", url: \`/pets/\${petId}\`, ...options });
    return res.data;
}
"
`;

exports[`OperationGenerator > [GET] should generate with pathParamsType \`object\` 1`] = `
"import client from "@kubb/swagger-client/client";
import type { ResponseConfig } from "@kubb/swagger-client/client";

 /**
 * @summary Info for a specific pet
 * @link /pets/:pet_id
 */
export async function showPetById({ petId, testId }: {
    petId: ShowPetByIdPathParams["pet_id"];
    testId: ShowPetByIdPathParams["testId"];
}, options: Partial<Parameters<typeof client>[0]> = {}): Promise<ResponseConfig<ShowPetByIdQueryResponse>["data"]> {
    const res = await client<ShowPetByIdQueryResponse>({ method: "get", url: \`/pets/\${petId}\`, ...options });
    return res.data;
}
"
`;

exports[`OperationGenerator > [GET] should generate with templates 1`] = `
"import client from "@kubb/swagger-client/client";
import axios from "axios";
import type { ResponseConfig } from "@kubb/swagger-client/client";

 /**
 * @summary Info for a specific pet
 * @link /pets/:pet_id
 */
export async function showPetById({ petId, testId }: {
    petId: ShowPetByIdPathParams["pet_id"];
    testId: ShowPetByIdPathParams["testId"];
}, options: Partial<Parameters<typeof client>[0]> = {}): Promise<ResponseConfig<ShowPetByIdQueryResponse>["data"]> {
    return axios.get(\`/pets/\${petId}\`, options);
}
"
`;
